[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/PlanetSystem.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Planet.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PlanetSystem" type="Node2D"]
script = ExtResource( 1 )
Speed = 1.0
Radius = 100

[node name="Planet" parent="." instance=ExtResource( 2 )]

[node name="AnimatedSprite" parent="Planet" index="0"]
animation = "default"

[node name="ShieldParticles" parent="Planet" index="2"]
visible = false

[node name="PowerUp_Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Fade" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 1 )
[connection signal="area_entered" from="Planet" to="." method="_on_Planet_area_entered"]
[connection signal="input_event" from="Planet" to="." method="_on_Planet_input_event"]
[connection signal="mouse_entered" from="Planet" to="." method="_on_Planet_mouse_entered"]
[connection signal="mouse_exited" from="Planet" to="." method="_on_Planet_mouse_exited"]
[connection signal="timeout" from="PowerUp_Timer" to="." method="_on_PowerUp_Timer_timeout"]
[connection signal="ready" from="Fade" to="." method="_on_Fade_ready"]

[editable path="Planet"]
